# FlappySquare

./: CMakeLists.txt  README.md  build_emscripten.sh  font.c  font.h  main.c  unity.c
emscripten/: index.html
src/: draw.c  draw.h  event.c  event.h  font.c  font.h  main.c  screen.c  screen.h  util.c  util.h  window.c  window.h
src/screens/: game.c  game.h  game_over.c  game_over.h  start.c  start.h
